@@ -1,5 +1,5 @@
 /*
- * src/lib/krb5/asn.1/asn1_decode_k.c
+ * src/lib/krb5/asn.1/asn1_k_decode.c
  * 
  * Copyright 1994 by the Massachusetts Institute of Technology.
  * All Rights Reserved.
@@ -21,7 +21,7 @@
  * or implied warranty.
  */
 
-#include "asn1_decode_k.h"
+#include "asn1_k_decode.h"
 #include "asn1_decode.h"
 #include "asn1_get.h"
 #include "asn1_misc.h"
